<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.LoginActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            android:layout_height="wrap_content">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


            <LinearLayout
                    android:id="@+id/upperLayout"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/login_top_cover">
                <ImageView
                        android:layout_width="180dp"
                        android:src="@drawable/login_cover_icon"
                        android:layout_height="180dp"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/lowerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="60"
                    android:orientation="vertical"
                    android:background="#FFFFFF">
            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="240dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="0dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="20dp"
                        app:cardUseCompatPadding="true">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="30dp">
                        <TextView
                                android:layout_width="match_parent"
                                android:text="@string/log_in"
                                android:textAlignment="center"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:textColor="@color/dark_blue"
                                android:layout_marginBottom="20dp"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:text="@string/email"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:textColor="@color/dark_blue"
                                android:layout_marginBottom="10dp"
                                android:layout_height="wrap_content"/>
                        <EditText
                                android:layout_width="match_parent"
                                android:hint="@string/enter_email"
                                android:id="@+id/userEmail"
                                android:background="@drawable/edittext_selector"
                                android:textSize="15sp"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:text="@string/password"
                                android:layout_marginTop="5dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:textColor="@color/dark_blue"
                                android:layout_marginBottom="10dp"
                                android:layout_height="wrap_content"/>
                        <EditText
                                android:layout_width="match_parent"
                                android:hint="@string/enter_your_password"
                                android:id="@+id/userPassword"
                                android:background="@drawable/edittext_selector"
                                android:textSize="15sp"
                                android:inputType="textPassword"
                                android:layout_height="wrap_content"/>
                        <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/dark_blue"
                                android:textAllCaps="false"
                                android:layout_marginTop="15dp"
                                app:cornerRadius="10dp"
                                android:id="@+id/enterButton"
                                android:textSize="16sp"
                                android:paddingVertical="10dp"
                                android:paddingHorizontal="30dp"
                                android:text="@string/enter"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</ScrollView>